# Data_Examples

./: README.md
TCP/handshake_cmake/: CMakeLists.txt
TCP/handshake_cmake/handshake/: client.cpp  server.cpp
TCP/handshake_py/: client.py  server.py
UDP/cpp/: meson.build
UDP/cpp/include/: logManagerClass.h  stringManager.h  udpManagerClass.h
UDP/cpp/src/: logManagerClass.cpp  meson.build  test_meson.txt  udpManager.cpp
UDP/cpp/tools/: meson.build  meson.txt  sendDoubleUDP.cpp  sendStringThreadUDP.cpp  sendStringUDP.cpp  udpRecieve.cpp
UDP/cpp_cmake/: CMakeLists.txt
UDP/cpp_cmake/get/: getStringThreadUDP.txt  getThreadUDP.cpp  getUDP.cpp
UDP/cpp_cmake/send/: sendDoubleThreadUDP.cpp  sendDoubleUDP.cpp  sendStringThreadUDP.cpp  sendStringUDP.cpp
UDP/cpp_cmake/udpManager/: udpManager.cpp  udpManager.h
UDP/python/: StreamDoubleLoopRateUDP.py  StreamDoubleUDP.py  StreamUDP.py  getDoubleUDP.py  getStringUDP.py
figures/: lazy_plot_example.m  plot_fill_ex.asv  plot_fill_ex.m  py_plot_example.py  simple_plot.asv  tight_subplot_example.asv  tight_subplot_example.m
logging/cpp_cmake/logger/: simple_logger.cpp
